...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A7t-K2-g49" customClass="HighscoreButton" customModule="ImRahmen" customModuleProvider="target">
                                                <rect key="frame" x="0.0" y="43" width="359" height="44"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="44" id="hJU-Rw-2vV"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                                <state key="normal" title="0 Punkte">
                                                    <color key="titleColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
                                                <connections>
                                                    <action selector="showHighscore:" destination="A0x-0f-TGm" eventType="touchUpInside" id="mic-Mg-Ak4"/>
                                                </connections>
                                            </button>
...
                            <constraint firstItem="tUq-pt-fri" firstAttribute="top" secondItem="b0H-H3-WMJ" secondAttribute="bottom" id="E77-k6-xgF"/>
                            <constraint firstItem="b0H-H3-WMJ" firstAttribute="top" secondItem="RVy-Vk-OsF" secondAttribute="bottom" id="Etx-Mv-7Ea"/>
                            <constraint firstItem="b0H-H3-WMJ" firstAttribute="leading" secondItem="faD-zv-TiK" secondAttribute="leading" id="xyN-l7-s0d"/>
                        </constraints>
                    </view>
                    <extendedEdge key="edgesForExtendedLayout"/>
                    <navigationItem key="navigationItem" title="Spielefinder" id="a6B-QO-BbW">
                        <barButtonItem key="backBarButtonItem" title=" " id="9MV-1l-SWl"/>
                    </navigationItem>
                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                    <connections>
                        <outlet property="foundGamesTitle" destination="7Zf-r6-K98" id="zsU-1t-O8p"/>
                        <outlet property="gifImageView" destination="gaM-qj-i2e" id="btg-0z-txO"/>
...
                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="44" id="ZOU-h5-6Lf"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <color key="tintColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                <state key="normal" title="START">
                                                    <color key="titleColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
                                                <connections>
                                                    <action selector="startButtonPressed:" destination="MD1-VV-6zj" eventType="touchUpInside" id="e8u-1s-oXg"/>
                                                    <segue destination="A0x-0f-TGm" kind="show" id="QeK-Gv-HaZ"/>
                                                </connections>
...
                                            <button opaque="NO" contentMode="bottom" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HNu-kC-S8B">
                                                <rect key="frame" x="79" y="535" width="201" height="20"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="20" id="vdB-DS-joM"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <state key="normal" title="Nicht in der Staatsgalerie?">
                                                    <color key="titleColor" red="0.25490196079999999" green="0.75686274509999996" blue="0.60392156860000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
                                                <connections>
                                                    <action selector="onLocationTap:" destination="MD1-VV-6zj" eventType="touchUpInside" id="UPd-fg-Lph"/>
                                                </connections>
                                            </button>
...
