...
    
    @IBAction func startButtonPressed(_ sender: Any) {
        startButton.setStylePressed()
    }
    
    @IBAction func onLocationTap(_ sender: Any) {
        let alertController = UIAlertController(title: "Nicht in der Staatsgalerie?", message: "Die vollen Funktionen dieser App sind nur in der Staatsgalerie Stuttgart nutzbar. Du weißt nicht, wie du am schnellsten zur Staatsgalerie kommst? Dann klicke auf 'Auf Karte anzeigen'.", preferredStyle: .alert)
        let cancelAction = UIAlertAction(title: "Abbrechen", style: .cancel) { action in }
        alertController.addAction(cancelAction)
        let showAction = UIAlertAction(title: "Auf Karte anzeigen", style: .default) { action in
            UIApplication.shared.openURL(NSURL(string: "http://maps.apple.com/?address=State%20Gallery")! as URL)
        }
        alertController.addAction(showAction)
        self.present(alertController, animated: true) { }
...
