...

    
    //Highscore Button
    @IBAction func showHighscore(_ sender: Any) {
        highscoreButton.setStylePressed()
        let alert = UIAlertController(title: "", message: "Dieser Bereich ist in dieser Version leider noch nicht vorhanden.", preferredStyle: UIAlertControllerStyle.alert)
        alert.addAction(UIAlertAction(title: "Okay", style: UIAlertActionStyle.default, handler: nil))
        self.present(alert, animated: true, completion: nil)
        highscoreButton.setStyleNormal()

    }
    
    //Segue
...
